# candidate_vetting

./: .gitignore  README.md  pyproject.toml
candidate_vetting/: healpix_utils.py  models.py  routers.py  vet.py
candidate_vetting/migrations/: 0002_create_views.py  0006_desidr1q3c_nedlvsq3c_twomassq3c_ztfvarstarq3c.py  0007_cosmicflows4q3c_hecate1q3c_hecate2q3c_lsdr10southq3c_and_more.py  0008_alter_lsdr10southtargetmatch_table_and_more.py  0008_usergalaxyq3c.py  0009_evccq3c.py
candidate_vetting/public_catalogs/: catalog.py  phot_catalogs.py  static_catalogs.py  util.py
