[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-vetting"
version = "0.1.0"
description = "Target and Observation Manager App for candidate vetting"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.13"
authors = [
    {name = "TROVE Team"}
]
keywords = ["astronomy", "gravitational-waves", "tom", "transients"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "astropy",
    "django",
    "numpy",
    "pandas",
    "requests",
    "scipy",
    "SQLAlchemy",
    "fundamentals",
    "tomtoolkit @ git+https://github.com/noahfranz13/tom_base.git@v2.32.3",
    "trove_mpc @ git+https://github.com/astro-trove/trove-mpc.git",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/astro-trove/candidate_vetting"
Repository = "https://github.com/astro-trove/candidate_vetting"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]